--- a/Homework/homework_5_css/style_baitap3.css
+++ b/Homework/homework_5_css/style_baitap3.css
@@ -7,17 +7,49 @@
         #0a1f24 10%,
         #0a1f24 100%);
         width: 100%;
-        height: 600px;
+        height: 800px;
+    padding: 0px 20%;
 }
 .content {
     display: inline-block;
-    width: 50%;
+    width: 30%;
     height: 200px;
     margin: -4px;
 }
 #div_left {
-    background-color: rebeccapurple;
+    margin-top: 10%
+}
+#title_left {
+    color: bisque;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+}
+#content_left {
+    color: white;
+    font-family: Playfair Display;
+    font-size: 30px;
+    width: 60%;
 }
 #div_right {
-    background-color: green;
+    background-color: white;
+    vertical-align: top;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    margin-top: 3%;
+    padding: 60px 30px 120px 30px;
+    
+}
+#title_right {
+    font-family: Roboto, sans-serif;
+    font-weight: bold;
+    color: black;
+    font-size: 18px;
+}
+#content_right {
+    font-family: Open Sans, sans-serif;
+    color: #948d8d;
+    font-size: 16px;
+    line-height: 1.6;
+}
+#icon_right {
+    padding: 20px 0px;
 }
