--- a/Homework/homework_6_csslayout/style_bt3.css
+++ b/Homework/homework_6_csslayout/style_bt3.css
@@ -1,78 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-body{
-    padding: 0;
-    margin: 0;
-}
-
-.container{
+#all {
     width: 100%;
+}
+.header {
     position: relative;
-}
-
-.container_item1{
-    position: absolute;
-    z-index: 1;
-    background-color: #3c3f5d;
+    background-color: #3C3F5D;
     width: 100%;
-    height: 150px;
+    height: 100px;
 }
-
-.container_item2{
-    position: absolute;
-    z-index: 2;
-    background-color: #ec6843;
-    width: 240px;
-    height: 480px;
-    border-radius: 5%;
-    top: 30px;
-    left: calc(50% + 100px);;
-}
-
-.container_item3{
-    position: absolute;
-    z-index: 3;
-    top: 50px;
-    left: calc(50% - 300px);
-}
-
-.container_item4{
-    background-color: white;
-    position: absolute;
-    z-index: 4;
-    width: 20%;
-    border-radius: 5%;
-    padding: 1% 1%;
-
-    left: 425px;
-    top: 360px;
-}
-
-.image{
-    width: 600px;
+.sidebar {
+    background-color: #EC6843;
+    width: 8%;
     height: 400px;
-    border-radius: 5%;
+    border-radius: 7px;
+    position: absolute;
+    top: 30px;
+    left: 65%;
 }
-
-.heading{
-    font-size: 13pt;
-    color: #8699a8;
+.image {
+    width: 40%;
+    position: absolute;
+    top: 50px;
+    left: 30%;
+}
+img {
+    width: 100%;
+    border-radius: 10px;
+}
+.content {
+    background-color: aliceblue;
+    border-radius: 10px;
+    width: 20%;
+    color: #3C3F5D;
+    padding: 10px 20px;
+    position: absolute;
+    left: 20%;
+    top: 170px;
+}
+#title {
     font-family: 'Roboto', sans-serif;
 }
-
-.content{
-    padding-top: 5px;
-    padding-bottom: 10px;
-    font-size: 32pt;
-    color: #67697f;
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.0;
+#content_pa {
+    font-family: 'Open Sans' ,sans-serif;
     font-weight: bold;
-}
-
-.footer{
-    font-size: 8pt;
-    color: #8699a8;
-    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
 }
