--- a/OnClass/BuoiX/stylebt1.css
+++ b/OnClass/BuoiX/stylebt1.css
@@ -1,9 +1,10 @@
 .container {
     display: flex;
     flex-direction: row;
-    width: 80vw;
+    width: 100vw;
     height: 40vh;
     margin: auto;
+    background-color: gray;
 }
 .item {
     width: 25vw;
@@ -12,7 +13,13 @@
 img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .item:hover {
-    width: 40vw;
+    width: 42vw;
+}
+.ground {
+    width: 100%;
+    background-color: gray;
+
 }
