--- a/Homework/homework_X_flex/style_bt1.css
+++ b/Homework/homework_X_flex/style_bt1.css
@@ -1,10 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
 .body_container {
     width: fit-content;
     display: flex;
     flex-direction: row;
     height: 500px;
     margin: 0 auto;
-    
+    font-family: 'DM Sans', sans-serif;
 }
 .item {
     width: 25vw;
@@ -17,15 +20,17 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    padding: 20px 20px;
+    padding: 15px 20px;
     justify-content: space-between;
     box-sizing: border-box;
+
 }
 .item_date {
     color: gray;
 }
 .item_menu {
     padding: 0 5px;
+    font-size: larger;
 }
 .item1 {
     background-color: #FEE4CB;
@@ -35,4 +40,27 @@
 }
 .item3 {
     background-color: #DBF6FD;
+}
+.item_content {
+    text-align: center;
+}
+.item_content_body {
+    color: gray;
+}
+.item_content_title {
+    font-weight: bold;
+}
+.item_content_progress {
+    text-align: left;
+}
+.item_content_progressLine {
+    width: 25vw;
+    height: 40px;
+    border-radius: 10%;
+    background-color: linear-gradient(
+        to right,
+        #FE8D22 0%,
+        #FE8D22 60%, 
+        #FFFFFF 60%, 
+        #FFFFFF  100%);
 }
